--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -118,7 +118,7 @@
 
 
     <!--site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="LACAMA.jpg" alt="DIAGRAM" >
       </div>
@@ -141,7 +141,7 @@
     </div>
     <!-- content-->
     <!--Problem cloud-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right body-txt">
         <P class="titleL"> PROBLEM CLOUD</P>
         <p class="lineHorizAll"></p>
@@ -161,7 +161,7 @@
     <div class="blankHXL"></div>
 
     <!--Problem cloud-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right body-txt">
         <P class="titleL"> PROBLEM CLOUD</P>
         <p class="lineHorizAll"></p>
@@ -190,7 +190,7 @@
     </div>
     <!-- content-->
     <!--Cloud Diagram -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="problem_cloud.jpg" alt="DIAGRAM" >
       </div>
@@ -209,7 +209,7 @@
     </div>
     <!--Cloud Diagram -->
     <!--Cloud Diagram -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="problem_cloud1.jpg" alt="DIAGRAM" >
       </div>
@@ -229,7 +229,7 @@
     </div>
     <!--Cloud Diagram -->
     <!--Cloud Diagram -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="problem_cloud2.jpg" alt="DIAGRAM" >
       </div>
@@ -247,7 +247,7 @@
     </div>
     <!--Cloud Diagram -->
     <!--Cloud Diagram -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="problem_cloud3.jpg" alt="DIAGRAM" >
       </div>
@@ -273,7 +273,7 @@
     </div>
     <!-- content-->
     <!--CaseStudy1 -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left  body-txt">
         <p class="titleL">FIRST ROUND TEST </p>
         <p class="lineHorizAll"></p>
@@ -301,7 +301,7 @@
     </div>
     <!-- content-->
     <!--render -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="render.jpg" alt="DIAGRAM" >
       </div>
@@ -324,7 +324,7 @@
     <!-- content-->
 
     <!--Site and City -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left  body-txt">
         <p class="titleL"> OTHER MUSEUMS IN LA </p>
         <p class="lineHorizAll"></p>
@@ -341,7 +341,7 @@
     </div>
     <!--Site and City -->
     <!--Site and City2 -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left  body-txt">
         <p class="titleL"> EXTENSION OF ANGLE ORIENTATION </p>
         <p class="lineHorizAll"></p>
@@ -357,7 +357,7 @@
     </div>
     <!--Site and City2 -->
     <!--Site and City3 -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left  body-txt">
         <p class="titleL">ANGLES IN BETWEEN VERTICALITY</p>
         <p class="lineHorizAll"></p>
@@ -373,7 +373,7 @@
     </div>
     <!--Site and City3 -->
     <!--Site and City4 -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left  body-txt">
         <p class="titleL"> ANGLES IN BETWEEN HORIZONTALITY</p>
         <p class="lineHorizAll"></p>
@@ -398,7 +398,7 @@
     </div>
     <!-- content-->
     <!--SITE Plan-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="onsite.jpg" alt="DIAGRAM" >
       </div>
@@ -413,7 +413,7 @@
     <div class="blankHXL"></div>
 
     <!--Plan1-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">FLOOR PLAN </p>
         <p class="lineHorizAll"></p>
@@ -429,7 +429,7 @@
     <div class="blankHXL"></div>
 
     <!--Plan2-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="plan2.jpg" alt="DIAGRAM" >
       </div>
@@ -444,7 +444,7 @@
     <div class="blankHXL"></div>
 
     <!--Plan3-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">FLOOR PLAN </p>
         <p class="lineHorizAll"></p>
@@ -460,7 +460,7 @@
     <div class="blankHXL"></div>
 
     <!--Plan4-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="plan4.jpg" alt="DIAGRAM" >
       </div>
@@ -482,7 +482,7 @@
     </div>
     <!-- content-->
     <!--Elevations-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="section1.jpg" alt="DIAGRAM" >
       </div>
@@ -497,7 +497,7 @@
     <div class="blankHXL"></div>
 
     <!--Elevation1-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">ELEVATION </p>
         <p class="lineHorizAll"></p>
