--- a/architecture/index.html
+++ b/architecture/index.html
@@ -141,21 +141,22 @@
     </div>
 
     <div class="t-intro zTop" data-aos="fade-up">
-      Most of the projects are from my three-year Master of Architecture program. Our main focuses
+      Most of the projects are from my three-year Master of Architecture program. The main focuses
       were Design Theories, Methods, and Practices. Projects emphasize the major format, spatial,
       material, tectonic, social, technological, and environmental determinants of building form.
       the penultimate studio incorporate integrative thinking that shapes complex architectural
       design and technical solutions based on design research and studio requirements.</div>
   </div>
-
-
-  <div class="body-h">
-    <p class="lineVerAll ver1"></p>
+  <div class="centerHorz ver1">
+    <div class=" lineVerAll "></div>
   </div>
+
+
+
 
   <!--architecture 1-->
   <div id="ytrigger-arch">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <a href="./recreation_commons"><img src="./ar_01.svg" class="widthS"> </a>
       <div class="blankVer">
       </div>
@@ -180,7 +181,7 @@
 
   <!--architecture 2-->
   <div id="ytrigger-arch2">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
@@ -200,7 +201,7 @@
   <div class="blankHXL"></div>
   <!--THESIS 3-->
   <div id="ytrigger-arch3">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <a href="./thesis_studio/"><img class="shadowAll" src="./ar_07.jpg"></a>
       <div class="blankVer">
       </div>
@@ -221,7 +222,7 @@
   <div class="blankHXL"></div>
   <!--MANIFOLD GROUND 4-->
   <div id="ytrigger-arch4">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
         <p class="lineHorizAll"></p>
@@ -242,7 +243,7 @@
   <!--RECOVERY OF RIVER EDGES 5-->
   <div id="ytrigger-arch5">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <a class="t-title" href="./recovery_of_river_edges/"> <img class="shadowAll"
           src="./ar_03.jpg"></a>
       <div class="blankVer">
@@ -264,7 +265,7 @@
   <div class="blankHXL"></div>
   <!--CURVES 6-->
   <div id="ytrigger-arch6">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF
@@ -286,7 +287,7 @@
   <!--LACMA 7-->
   <div id="ytrigger-arch7">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <a class="titleL" href="./LACAMA/"> <img class="shadowAll" src="./ar_08.jpg"></a>
       <div class="blankVer">
       </div>
@@ -306,7 +307,7 @@
 
   <!--architecture 8-->
   <div id="ytrigger-arch8">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p class="titleL" data-aos="fade-up">KAPPE HOUSE STUDY </p>
