--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -120,7 +120,7 @@
   <div class="marginAll marginAll1920">
 
     <!--site -->
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column float">
         <img src="greylines.jpg" alt="DIAGRAM" >
       </div>
@@ -171,7 +171,7 @@
     <div class="blankHXL"></div>
 
     <!--density-->
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="float">
         <p class="titleL">2D TO 3D MANIPULATION</p>
         <p class="lineHorizAll"></p>
@@ -192,7 +192,7 @@
     </div>
     <!-- content-->
     <!--site -->
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <p class="titleL">DIAGRAMS</p>
         <p class="lineHorizAll"></p>
@@ -216,7 +216,7 @@
 
 
     <!--Section Perspective -->
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column float">
         <img src="render.jpg" alt="DIAGRAM" >
       </div>
@@ -238,7 +238,7 @@
 
 
     <!--Site -->
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <p class="titleL">SITE</p>
         <p class="lineHorizAll"></p>
