--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -120,9 +120,9 @@
 
 
     <!--diagram 1-->
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="float">
-        <img src="render.jpg" alt="DIAGRAM" >
+        <img src="render.jpg" alt="DIAGRAM">
       </div>
       <div class="blankVer"></div>
       <div class="column widthM">
@@ -147,7 +147,7 @@
 
 
     <!--diagram 2-->
-    <div class="row-change row-changeRV centerVer">
+    <div class="rowChng rowChngRV centerVer">
       <div class="column widthM">
         <p class="titleL">PROGRAMS</p>
         <p class="lineHorizAll"></p>
@@ -155,7 +155,7 @@
           miscellaneous</p>
       </div>
       <div class="column float">
-        <img src="diagram.jpg" alt="DIAGRAM" >
+        <img src="diagram.jpg" alt="DIAGRAM">
       </div>
     </div>
     <!--diagram 2-->
@@ -171,9 +171,9 @@
 
 
     <!--Section Perspective -->
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column float">
-        <img src="render1.jpg" alt="DIAGRAM" >
+        <img src="render1.jpg" alt="DIAGRAM">
       </div>
       <div class="blankVer">
       </div>
@@ -185,15 +185,15 @@
     </div>
     <!--Section Perspective -->
 
-
     <!-- content-->
-    <div class="row  heightM centerVer ">
+    <div class="row marginAll heightM centerVer marginAll1920">
       <p class="tArrow"> Site and Floor Plan </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+      <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
+
     <!--Plan-->
-    <div class="row-change row-changeRV centerVer">
+    <div class="rowChng rowChngRV centerVer">
       <div class="column widthM">
         <p class="titleL">SITE PLAN</p>
         <p class="lineHorizAll"></p>
@@ -202,15 +202,15 @@
       <div class="blankVer">
       </div>
       <div class="float">
-        <img src="siteplan.jpg" alt="DIAGRAM" >
+        <img src="siteplan.jpg" alt="DIAGRAM">
       </div>
     </div>
     <!--Plan-->
     <div class="blankHXL"></div>
     <!--Plan site-->
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column float">
-        <img src="site.jpg" alt="DIAGRAM" >
+        <img src="site.jpg" alt="DIAGRAM">
       </div>
       <div class="blankVer">
       </div>
