--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -119,7 +119,7 @@
 
 
     <!--diagram 1-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="diagram.jpg" alt="DIAGRAM" >
       </div>
@@ -140,7 +140,7 @@
     </div>
     <!-- content-->
     <!--density-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right body-txt">
         <p class="titleL"> DENSITY OF DIVISIONS</p>
         <p class="lineHorizAll"></p>
@@ -167,7 +167,7 @@
     <br>
 
     <!--site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">SITE ANALYSIS</p>
         <p class="lineHorizAll"></p>
@@ -182,7 +182,7 @@
     <!--site -->
     <div class="blankHXL"></div>
     <!--site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">SITE RESEARCH METHOD</p>
         <p class="lineHorizAll"></p>
@@ -204,7 +204,7 @@
     </div>
     <!-- content-->
     <!--Section Perspective -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="research_photos.jpg" alt="DIAGRAM" >
       </div>
@@ -225,7 +225,7 @@
     <!-- content-->
 
     <!--research-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">RESEARCH ON SITE</p>
         <p class="lineHorizAll"></p>
@@ -241,7 +241,7 @@
     <div class="blankHXL"></div>
 
     <!--research-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">FINAL VIEWS</p>
         <p class="lineHorizAll"></p>
@@ -263,7 +263,7 @@
 
     <div class="blankHXL"></div>
     <!--programs-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="programs.jpg" alt="DIAGRAM" >
       </div>
@@ -279,7 +279,7 @@
     <div class="blankHXL"></div>
 
     <!--programs-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">DIAGRAMS</p>
         <p class="lineHorizAll"></p>
@@ -294,7 +294,7 @@
     <!--programs-->
     <div class="blankHXL"></div>
     <!--plan -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="plan.jpg" alt="DIAGRAM" >
       </div>
@@ -310,7 +310,7 @@
     <div class="blankHXL"></div>
 
     <!--render-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">Collages</p>
         <p class="lineHorizAll"></p>
