--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -116,78 +116,85 @@
   <!--body-->
   <div class="blankPhone"></div>
   <div class="blankHL"></div>
+
+
+
+  <!--diagram 1-->
+  <div class="rowChng centerVer centerHorz marginAll marginAll1920">
+    <img src="diagram.jpg" alt="DIAGRAM" class=" widthM">
+
+    <div class="column widthM">
+      <P class="titleL">TWO VOLUMES IN ONE SPACE</P>
+      <p class="lineHorizAll"></p>
+      <p class="textM">the purpose of these two volumes is to distinguish two types of
+        programs: for the public, another for private use.</p>
+    </div>
+  </div>
+  <!--diagram 1-->
+
+
+  <div class="blankHL"></div>
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> Programs </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
   <div class="marginAll marginAll1920">
 
-
-
-    <!--diagram 1-->
-    <div class="row centerVer centerHorz">
-      <img src="diagram.jpg" alt="DIAGRAM" class="float widthL">
-
-      <div class="column">
-        <P class="titleL">TWO VOLUMES IN ONE SPACE</P>
-        <p class="lineHorizAll"></p>
-        <p class="textM">the purpose of these two volumes is to distinguish two types of
-          programs: for the public, another for private use.</p>
-      </div>
-    </div>
-    <!--diagram 1-->
-
-
-
-    <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> Programs </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
-    <br>
     <!--diagram 1-->
     <div class="column centerVer centerHorz">
-      <img src="programs.jpg" alt="DIAGRAM" class=" float">
+      <img src="programs.jpg" alt="DIAGRAM">
+      <div class="widthM">
 
-      <p class="titleL">PRIVATE VS. PUBLIC</p>
-      <p class="lineHorizAll"></p>
-      <p class="textM widthL">insert two volumes into one space two distinguish two main
-        programs. one for the public, another one for private purpose</p>
+        <p class="titleM">PRIVATE VS. PUBLIC</p>
+        <p class="lineHorizAll"></p>
+        <p class="textM widthL">insert two volumes into one space two distinguish two main
+          programs. one for the public, another one for private purpose</p>
+      </div>
+
 
     </div>
     <!--diagram 1-->
     <div class="blankHXL"></div>
     <!--diagram 2-->
     <div class="column centerVer centerHorz">
-      <img src="diagram0.jpg" alt="DIAGRAM" class="float">
+      <img src="diagram0.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
 
-      <p class="titleL">EXERCISE VS. LEISURE</p>
-      <p class="lineHorizAll"></p>
-      <p class="textM widthL">the circulation integrates the two volumes as one space. it creates
-        a
-        dynamic view between the leisure and training sections.</p>
+      <div class="widthM">
+        <p class="titleM">EXERCISE VS. LEISURE</p>
+        <p class="lineHorizAll"></p>
+        <p class="textM widthL">the circulation integrates the two volumes as one space. it creates
+          a dynamic view between the leisure and training sections.</p>
+      </div>
     </div>
     <!--diagram 2-->
-    <div class="blankHL"></div>
+  </div>
+  <div class="blankHL"></div>
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> Diagrams </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
 
-    <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> Diagrams </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
+  <div class="blankHS"></div>
+  <div class="marginAll marginAll1920">
+
     <!--environmental diagram-->
-    <div class="body-h">
-      <div class="body-right  body-txt marginAll">
-        <p class="titleS">THE MANIPULATION OF TWO VOLUMES</p>
+    <div class="rowChng centerVer">
+      <div class="column widthM">
+        <p class="titleS">MANIPULATION OF TWO VOLUMES</p>
         <p class="lineHorizAll"></p>
         <p class="textM">Void vs. Solid</p>
       </div>
-      <div class="body-left body-img float">
-        <img src="diagram1.jpg" alt="DIAGRAM" >
-      </div>
+      <img class="widthL" src="diagram1.jpg" alt="DIAGRAM">
     </div>
     <!--environmental diagram-->
     <!--environmental diagram-->
-    <div class="body-h">
-      <div class="body-right  body-txt marginAll">
+    <div class="rowChng centerVer">
+      <div class="column widthM">
         <p class="titleS">LIGHT AND AIR</p>
         <p class="lineHorizAll"></p>
 
@@ -195,111 +202,116 @@
           build providing all-day nature daylight from the top all the way to the swimming pool at
           first floor</p>
       </div>
-      <div class="body-left body-img float">
-        <img src="diagram2.jpg" alt="DIAGRAM" >
-      </div>
+      <img class="widthL" src="diagram2.jpg" alt="DIAGRAM">
     </div>
     <!--environmental diagram-->
     <!--environmental diagram-->
-    <div class="body-h">
-      <div class="body-right  body-txt marginAll">
+    <div class="rowChng centerVer">
+      <div class="column widthM">
         <p class="titleS">FACADE DESGIN</p>
         <p class="lineHorizAll"></p>
 
         <p class="textM">all the windows equally set, and the metal mesh with two types of
           coating redomly setup</p>
       </div>
-      <div class="body-left body-img float">
-        <img src="diagram3.jpg" alt="DIAGRAM" >
-      </div>
+      <img class="widthL" src="diagram3.jpg" alt="DIAGRAM">
     </div>
     <!--environmental diagram-->
 
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
 
 
     <!--Section Perspective -->
     <div class="column centerVer centerHorz">
-      <img src="section_perspective.jpg" alt="DIAGRAM" class="float">
+      <img src="section_perspective.jpg" alt="DIAGRAM">
+      <div class="blankHS"></div>
 
-      <div class="body-right body-txt widthXS">
-        <P class="titleL">SECTION PERSPECTIVE</P>
+      <div class="column alignCPH">
+        <P class="titleM">SECTION PERSPECTIVE</P>
         <p class="lineHorizAll"></p>
         <p class="textM">F1-5 with Facade Detail</p>
       </div>
     </div>
     <!--Section Perspective -->
-    <div class="blankHXL"></div>
 
-    <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> Renders </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
+    <div class="blankHL"></div>
+  </div>
+
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> Renders </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
+
+
+  <div class="marginAll marginAll1920">
 
     <!--renders 2-->
-    <div class="body-h">
-      <div class="body-right  body-txt">
+    <div class="column">
+      <img src="render_int1.jpg" alt="DIAGRAM">
+
+      <div class="widthM">
+
         <p class="titleL">INTERIOR VIEW</p>
         <p class="lineHorizAll"></p>
-
         <p class="textM">Interior view from the public side</p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-left float">
-        <img src="render_int1.jpg" alt="DIAGRAM" >
-      </div>
+
+
     </div>
     <!--renders 2-->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
     <!--renders 3-->
-    <div class="body-h">
-      <div class="body-left float">
-        <img src="render_int2.jpg" alt="DIAGRAM" >
-      </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-right body-txt">
+
+    <div class="column">
+      <img src="render_int2.jpg" alt="DIAGRAM">
+      <div class="widthM">
+
         <p class="titleL">INTERIOR VIEW</p>
         <p class="lineHorizAll"></p>
         <p class="textM">Interior view from the activity room</p>
       </div>
 
+
     </div>
     <!--renders 3-->
-    <div class="blankHXL"></div>
+    <div class="blankHL"></div>
 
     <!--renders 2-->
-    <div class="body-h">
-      <div class="body-right  body-txt">
+    <div class="column">
+
+      <img src="render_streetview.jpg" alt="DIAGRAM">
+      <div class="blankHXS"></div>
+
+      <div class="widthM">
+
         <p class="titleL">STREET VIEW</p>
         <p class="lineHorizAll"></p>
 
         <p class="textM">Street view from south west</p>
       </div>
-      <div class="blankVer">
-      </div>
-      <div class="body-left float">
-        <img src="render_streetview.jpg" alt="DIAGRAM" >
-      </div>
+
     </div>
     <!--renders 2-->
+  </div>
+  <div class="blankHL"></div>
 
 
-    <br>
-    <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> Plans and Sections </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> Plans and Sections </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
+  <div class="marginAll marginAll1920">
+
     <!--plans and sections 1-->
     <div class="column centerVer centerHorz">
-      <img src="plan_f1.jpg" alt="DIAGRAM" >
+      <img src="plan_f1.jpg" alt="DIAGRAM">
+      <div class="blankHXS"></div>
 
-      <p class="titleL">FLOOR PLANS </p>
+      <p class="titleM">FLOOR PLANS </p>
       <p class="lineHorizAll"></p>
       <p class="textM">F1 and F2</p>
     </div>
@@ -308,9 +320,10 @@
     <div class="blankHXL"></div>
     <!--plans and sections 2-->
     <div class="column centerVer centerHorz">
-      <img src="plan_f3.jpg" alt="DIAGRAM" >
+      <img src="plan_f3.jpg" alt="DIAGRAM">
+      <div class="blankHXS"></div>
 
-      <p class="titleL">FLOOR PLANS </p>
+      <p class="titleM">FLOOR PLANS </p>
       <p class="lineHorizAll"></p>
       <p class="textM">F3 and F4</p>
 
@@ -319,9 +332,10 @@
     <div class="blankHXL"></div>
     <!--plans and sections 3-->
     <div class="column centerVer centerHorz">
-      <img src="plan_f5.jpg" alt="plans and sections" >
+      <img src="plan_f5.jpg" alt="plans and sections">
+      <div class="blankHXS"></div>
 
-      <p class="titleL">FLOOR PLANS </p>
+      <p class="titleM">FLOOR PLANS </p>
       <p class="lineHorizAll"></p>
       <p class="textM">F5 and Facade Detail</p>
 
@@ -331,9 +345,10 @@
     <div class="blankHXL"></div>
     <!--plans and sections 2-->
     <div class="column centerVer centerHorz">
-      <img src="sections_l.jpg" alt="DIAGRAM" >
+      <img src="sections_l.jpg" alt="DIAGRAM">
+      <div class="blankHXS"></div>
 
-      <P class="titleL"> SECTIONS</P>
+      <P class="titleM"> SECTIONS</P>
       <p class="lineHorizAll"></p>
       <p class="textM">F5 and Facade Detail</p>
     </div>
@@ -341,34 +356,41 @@
     <div class="blankHXL"></div>
     <!--plans and sections 3-->
     <div class="column centerVer centerHorz">
-      <img src="section_1.jpg" alt="Section1" >
-      <img src="section_2.jpg" alt="Section2" >
-      <P class="titleL">SECTIONS</P>
+      <img src="section_1.jpg" alt="Section1">
+      <img src="section_2.jpg" alt="Section2">
+      <div class="blankHXS"></div>
+
+      <P class="titleM">SECTIONS</P>
       <p class="lineHorizAll"></p>
       <p class="textM">Section Detail</p>
     </div>
     <!--plans and sections 3-->
-    <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow"> Site </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-    <!-- content-->
+
+  </div>
+  <!-- content-->
+  <div class="row marginAll heightM centerVer marginAll1920">
+    <p class="tArrow"> Site </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
+  <div class="marginAll marginAll1920">
+
     <!--site-->
     <div class="column centerVer centerHorz">
-      <img src="site.jpg" alt="DIAGRAM" >
+      <img src="site.jpg" alt="DIAGRAM">
+    <div class="blankHXS"></div>
 
-      <p class="titleL">SITE </p>
+      <p class="titleM">SITE </p>
       <p class="lineHorizAll"></p>
       <p class="textM">110 Franklin St. San Francisco, CA, 94102</p>
 
     </div>
     <!--site-->
-    <div class="blankHXL"></div>
-
-
-
   </div>
+  <div class="blankHL"></div>
+
+
+
 </body>
 
 
