--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -118,7 +118,7 @@
     <div class="blankHL"></div>
 
     <!--site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="render0.jpg" alt="DIAGRAM" >
       </div>
@@ -142,7 +142,7 @@
     </div>
     <!-- content-->
     <!--geometry-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right body-txt">
         <P class="titleL"> A 20 FEET DIAMETER SITE</P>
         <p class="lineHorizAll"></p>
@@ -156,7 +156,7 @@
     <!--geometry-->
     <div class="blankHL"></div>
     <!--geometry-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right body-txt">
         <P class="titleL"> ADDING OR BOOLEAN GEOMETRY ON SITE</P>
         <p class="lineHorizAll"></p>
@@ -179,7 +179,7 @@
     <div class="blankHL"></div>
 
     <!--density-->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right body-txt">
         <p class="titleL">TWO CUTS ONE FOAM</p>
         <p class="lineHorizAll"></p>
@@ -196,7 +196,7 @@
 
 
     <!--site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">PHOTOS OF THE FOAM</p>
         <p class="lineHorizAll"></p>
@@ -215,7 +215,7 @@
 
 
     <!--Section Perspective -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="line3.jpg" alt="DIAGRAM" >
       </div>
@@ -232,7 +232,7 @@
 
 
     <!--Site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL"> DRAWING    </p>
         <p class="lineHorizAll"></p>
@@ -255,7 +255,7 @@
     </div>
     <!-- content-->
     <!--Site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="foamisland.jpg" alt="DIAGRAM" >
       </div>
@@ -269,7 +269,7 @@
     </div>
     <!--Site -->
     <!--Site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">FLOOR PLANS </p>
         <p class="lineHorizAll"></p>
@@ -286,7 +286,7 @@
     <!--Site -->
     <div class="blankHL"></div>
     <!--Site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="elv.jpg" alt="DIAGRAM" >
       </div>
@@ -300,7 +300,7 @@
     </div>
     <!--Site -->
     <!--Site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-right  body-txt">
         <p class="titleL">SECTIONS</p>
         <p class="lineHorizAll"></p>
@@ -317,7 +317,7 @@
     <!--Site -->
     <div class="blankHL"></div>
     <!--Site -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="render.jpg" alt="DIAGRAM" >
       </div>
