--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -119,7 +119,7 @@
   <div class="marginAll marginAll1920">
 
     <!-- cover -->
-    <div class="row-change">
+    <div class="rowChng">
       <div class="column float">
         <svg width="893px" height="115px" viewBox="0 0 893 115" version="1.1"
           xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -305,7 +305,7 @@
     </div>
     <!-- content-->
     <!--CaseStudy1 -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left  body-txt">
         <p class="titleL">CASE STUDY 1</p>
         <p class="lineHorizAll"></p>
@@ -323,7 +323,7 @@
     <br>
     <br>
     <!--CaseStudy2 -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left  body-txt">
         <p class="titleL">CASE STUDY 2</p>
         <p class="lineHorizAll"></p>
@@ -339,7 +339,7 @@
     </div>
     <!--CaseStudy2 -->
     <!--CaseStudy3 -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left  body-txt">
         <p class="titleL">CASE STUDY 3 </p>
         <p class="lineHorizAll"></p>
@@ -355,7 +355,7 @@
     </div>
     <!--CaseStudy3 -->
     <!--CaseStudy4 -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left  body-txt">
         <p class="titleL">CASE STUDY 4</p>
         <p class="lineHorizAll"></p>
@@ -380,7 +380,7 @@
     </div>
     <!-- content-->
     <!--Results of Manipulations -->
-    <div class="body-h">
+    <div class="row">
       <div class="body-left body-img float">
         <img src="compare.jpg" alt="DIAGRAM" >
       </div>
