--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
+  <!--intro-->
+
 
   <div class="blankHL"></div>
   <div class="blankPhoneS"></div>
@@ -147,11 +149,11 @@
   <div class="blankHM"></div>
 
 
-
-  <!--body-->
-  <div class="body-h">
-    <p class="lineVerAll ver1"></p>
+  <div class="centerHorz ver1">
+    <div class=" lineVerAll "></div>
   </div>
+  <!--intro-->
+
   <!-- content-->
   <div class="row marginAll heightM centerVer marginAll1920">
     <p class="tArrow"> Selected Projects </p>
@@ -183,7 +185,7 @@
         <div class="slide">
           <div class="rowChng centerVer">
             <a href="/project/gardeners_hub">
-              <img class="widthL"  src="./layout_GardenersHub.png" alt="Gardeners' Hub">
+              <img class="widthL" src="./layout_GardenersHub.png" alt="Gardeners' Hub">
             </a>
             <div class="column">
               <a href="/project/gardeners_hub" class="titleM"> GARDENERS HUB</a>
@@ -197,7 +199,7 @@
         <div class="slide">
           <div class="rowChng centerVer">
             <a href="/appointment_maker">
-              <img class="widthL"  src="./layout_AppointmentMaker.png" alt="APPOINTMENT MAKER">
+              <img class="widthL" src="./layout_AppointmentMaker.png" alt="APPOINTMENT MAKER">
             </a>
             <div class="column">
               <p href="/alltrails" class="titleM"> APPOINTMENT MAKER</p>
@@ -228,7 +230,7 @@
         <div class="slide">
           <div class="rowChng centerVer">
             <p href="/medication_reminder">
-              <img class="widthL"  src="./layout_MedicationReminder.png" alt="APPOINTMENT MAKER">
+              <img class="widthL" src="./layout_MedicationReminder.png" alt="APPOINTMENT MAKER">
             </p>
             <div class="column">
               <p href="/alltrails" class="titleM">MEDICATION REMINDER</p>
@@ -778,9 +780,9 @@
 
   <div class="marginAll marginAll1920">
 
-      <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/Resume_vw.pdf"
-        class="text-about-resume titleM displayNonePhone"> Download My Resume
-      </a>
+    <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/Resume_vw.pdf"
+      class="text-about-resume titleM displayNonePhone"> Download My Resume
+    </a>
 
     <div class="blankHM"></div>
 
