--- a/photography/index.html
+++ b/photography/index.html
@@ -143,13 +143,13 @@ Interested in what you see? Shoot me an email :) " />
       dimensions. Observing the narrative of natural components within a certain perspective.</div>
   </div>
 
-  <div class="body-h">
-    <p class="lineVerAll ver1"></p>
+  <div class="centerHorz ver1">
+    <div class=" lineVerAll "></div>
   </div>
 
   <!--Photo 1-->
   <div id="ytrigger-pg">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./01.jpg">
       <div class="blankVer">
       </div>
@@ -168,7 +168,7 @@ Interested in what you see? Shoot me an email :) " />
 
 
   <div id="ytrigger-pg2">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p class="titleL">Bosque Del Apache National Wildlife Refuge</p>
@@ -188,7 +188,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 3-->
   <div id="ytrigger-pg3">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./03.jpg">
       <div class="blankVer">
       </div>
@@ -207,7 +207,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <div id="ytrigger-pg4">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
@@ -228,7 +228,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 5-->
   <div id="ytrigger-pg5">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./05.jpg">
       <div class="blankVer">
       </div>
@@ -245,7 +245,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 6-->
   <div id="ytrigger-pg6">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
@@ -263,7 +263,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 7-->
   <div id="ytrigger-pg7">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./07.jpg">
       <div class="blankVer">
       </div>
@@ -281,7 +281,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 8-->
   <div id="ytrigger-pg8">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
@@ -300,7 +300,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 9-->
   <div id="ytrigger-pg9">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./09.jpg">
       <div class="blankVer">
       </div>
@@ -317,7 +317,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 10-->
   <div id="ytrigger-pg10">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
@@ -335,7 +335,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 11-->
   <div id="ytrigger-pg11">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./11.jpg">
       <div class="blankVer">
       </div>
@@ -354,7 +354,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <div id="ytrigger-pg12">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
@@ -375,7 +375,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 13-->
   <div id="ytrigger-pg13">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./13.jpg">
       <div class="blankVer">
       </div>
@@ -393,7 +393,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 14-->
   <div id="ytrigger-pg14">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
@@ -412,7 +412,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 15-->
   <div id="ytrigger-pg15">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./15.jpg">
       <div class="blankVer">
       </div>
@@ -430,7 +430,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 16-->
   <div id="ytrigger-pg16">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p class="titleL">Taos Pueblo Indian Reservation</p>
@@ -450,7 +450,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 17-->
   <div id="ytrigger-pg17">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./17.jpg">
       <div class="blankVer">
       </div>
@@ -467,7 +467,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 18-->
   <div id="ytrigger-pg18">
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p class="titleL">Yellowstone National Park</p>
