--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -123,10 +123,10 @@
 
     <div class="blankHL blankHL1920"></div>
     <div class="blankPhone"></div>
-    <div class="marginAll marginAll1920 row-change centerVer">
+    <div class="marginAll marginAll1920 rowChng centerVer">
 
-      <img class="float widthL widthL1920 " src="../../layout_gardenershub.png" alt="Gardenrs' Hub">
-      <div class="column widthM">
+      <img class="widthM widthL1920" src="../../layout_gardenershub.png" alt="Gardenrs' Hub">
+      <div class="column ">
         <P class="titleM" data-aos="fade-up">GARDENERS HUB </P>
         <p class="lineHorizAll"></p>
         <p class="textS"> <strong>My Role:</strong> &nbsp; Design Research, UX/UI Design,
@@ -158,10 +158,10 @@
   <!-- initial concepts -->
 
 
-  <div class="marginAll marginAll1920 row-change">
-    <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
+  <div class="marginAll marginAll1920 rowChng">
+    <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon svg float">
       <img class="widthLogo paddingS" src="icon_concepts1.svg" alt="User Research">
-      <P class="lineHorizS"> </P>
+      <P class="lineHorizSGH colorGHbg1"> </P>
       <P class="titleM"> Share &amp; Sell </P>
       <div class="blank-lineheight-s"></div>
       <P class="textS"> &#183; Nearby</P>
@@ -171,7 +171,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts2.svg" alt="User Research">
-      <P class="lineHorizS"> </P>
+      <P class="lineHorizSGH"> </P>
       <P class="titleM"> Social Network </P>
       <div class="blank-lineheight-s"></div>
       <P class="textS"> &#183; Local Network</P>
@@ -181,7 +181,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts3.svg" alt="User Research">
-      <P class="lineHorizS"> </P>
+      <P class="lineHorizSGH"> </P>
       <P class="titleM"> Plant Profile </P>
       <div class="blank-lineheight-s"></div>
 
@@ -192,7 +192,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts4.svg" alt="User Research">
-      <P class="lineHorizS"> </P>
+      <P class="lineHorizSGH"> </P>
       <P class="titleM"> Plant Care </P>
       <div class="blank-lineheight-s"></div>
 
@@ -228,20 +228,20 @@
 
   <!-- content-->
   <!--Img 1-->
-  <div id="ytrigger-gh1" class="row-change row-changeRV centerVer marginAll marginAll1920">
+  <div id="ytrigger-gh1" class="rowChng rowChngRV centerVer marginAll marginAll1920">
     <div class="column">
       <p class="titleL">Sell and Share</p>
       <p class="lineHorizAll"></p>
       <p class="textM">A community marketplace </p>
     </div>
-    <img src="solution_sell.png" class="float widthL" alt="DIAGRAM">
+    <img src="solution_sell.png" class="widthL" alt="DIAGRAM">
   </div>
   <!--img 1-->
   <div class="blankHL"></div>
 
   <!--img 2-->
-  <div class="row-change centerVer marginAll marginAll1920" id="ytrigger-gh2">
-    <img src="solution_socialnetwork.png" class="float widthL" alt="DIAGRAM">
+  <div class="rowChng centerVer marginAll marginAll1920" id="ytrigger-gh2">
+    <img src="solution_socialnetwork.png" class="widthL" alt="DIAGRAM">
     <div class="blankVer">
     </div>
     <div class="column">
@@ -257,21 +257,21 @@
   <div class="blankHL"></div>
 
   <!--Img 3-->
-  <div id="ytrigger-gh3" class="row-change row-changeRV centerVer marginAll marginAll1920">
+  <div id="ytrigger-gh3" class="rowChng rowChngRV centerVer marginAll marginAll1920">
     <div class="column">
       <p class="titleL">Plant Profile</p>
       <p class="lineHorizAll"></p>
       <p class="textM"> Identify plants</p>
       <p class="textM"> Plant care(Watering, Light, Soil, Ventilation)</p>
     </div>
-    <img src="solution_profile.png" class="float widthL" alt="DIAGRAM">
+    <img src="solution_profile.png" class="widthL" alt="DIAGRAM">
   </div>
   <!--img 3-->
   <div class="blankHL"></div>
 
   <!--img 4-->
-  <div class="row-change centerVer marginAll marginAll1920" id="ytrigger-gh4">
-    <img class="float widthL" src="solution_account.png" alt="DIAGRAM">
+  <div class="rowChng centerVer marginAll marginAll1920" id="ytrigger-gh4">
+    <img class="widthL" src="solution_account.png" alt="DIAGRAM">
     <div class="blankVer">
     </div>
     <div class="column">
@@ -295,7 +295,7 @@
   </div>
   <!-- content-->
   <!--Problem and solution-->
-  <div class="row-change align-top marginAll1920 marginAll">
+  <div class="rowChng align-top marginAll1920 marginAll">
     <div class="column">
       <P class="titleL">PROBLEMS</P>
       <p class="lineHorizAll"></p>
@@ -334,10 +334,10 @@
 
   <!--design thinking process-->
 
-  <div class="row-change centerHorz align-top marginAll1920 marginAll centerPhone">
+  <div class="rowChng centerHorz align-top marginAll1920 marginAll centerPhone">
 
     <div class="column centerVer">
-      <P class="centerVer centerHorz colorGreyShadow circleGH titleM">Empathize </P>
+      <P class="centerVer centerHorz colorGreyShadow circleGH titleL">Empathize </P>
       <div class="blankHM"></div>
       <P class="textS"> &#183; User Research</P>
       <P class="textS"> &#183; Competitive Analysis </P>
@@ -346,7 +346,7 @@
     <P class="researchArr"></P>
 
     <div class="column centerVer">
-      <P class="centerVer centerHorz colorGreyShadow circleGH  titleM">Define </P>
+      <P class="centerVer centerHorz colorGreyShadow circleGH  titleL">Define </P>
       <div class="blankHM"></div>
 
       <P class="textS"> &#183; Contextual Inquiries </P>
@@ -355,7 +355,7 @@
     <P class="researchArr"></P>
 
     <div class="column centerVer">
-      <P class="centerVer centerHorz colorGreyShadow circleGH  titleM">Ideate </P>
+      <P class="centerVer centerHorz colorGreyShadow circleGH  titleL">Ideate </P>
       <div class="blankHM"></div>
       <P class="textS"> &#183; Information Architecture</P>
       <P class="textS"> &#183; User Flow </P>
@@ -363,7 +363,7 @@
     </div>
     <P class="researchArr"></P>
     <div class="column centerVer">
-      <P class="centerVer centerHorz colorGreyShadow circleGH  titleM">Prototype
+      <P class="centerVer centerHorz colorGreyShadow circleGH  titleL">Prototype
       </P>
       <div class="blankHM"></div>
 
@@ -373,7 +373,7 @@
     <P class="researchArr"></P>
 
     <div class="column centerVer">
-      <P class="centerVer centerHorz colorGreyShadow circleGH  titleM">Final Design </P>
+      <P class="centerVer centerHorz colorGreyShadow circleGH  titleL">Final Design </P>
       <div class="blankHM"></div>
 
       <P class="textS"> &#183; On-boarding</P>
@@ -389,12 +389,10 @@
 
   <!--design thinking process-->
 
-  <br>
-
   <!-- 01 -->
   <div class="marginAll marginAll1920">
     <P class="textNos colorGH">01</P>
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleL">BACKGROUND RESEARCH</P>
         <p class="lineHorizAll"></p>
@@ -440,7 +438,7 @@
     <div class="blankHM"></div>
 
 
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleM">Gardeners&#8217; pain points</P>
         <p class="textM">&#183; What is the major problem to plant their own food? </p>
@@ -475,7 +473,7 @@
     </div>
     <br>
 
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleM">Mobile App</P>
         <p class="textM">&#183; don't have a social network features and task history tracking
@@ -770,7 +768,7 @@
       </div>
     </div>
     <br>
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleM">Website</P>
         <p class="textM">&#183; hard to share images and article on social media </p>
@@ -1071,7 +1069,7 @@
   <!-- 02 -->
   <div class="marginAll marginAll1920">
     <P class="textNos colorGH">02</P>
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleL">SECONDARY RESEARCH </P>
         <p class="lineHorizAll"></p>
@@ -1110,11 +1108,11 @@
   <div class="blankHM"></div>
   <div class="colorGHBg1 align-bottom" >
 
-    <div class="marginAll marginAll1920 row-change centerHorz">
+    <div class="marginAll marginAll1920 rowChng centerHorz">
 
       <div class="column centerVer colorGreyShadow border-radius heightM widthS marginIcon float ">
         <img class="widthLogo paddingS" src="icon_ci_1.svg" alt="User Research">
-        <P class="lineHorizS"> </P>
+        <P class="lineHorizSGH"> </P>
         <P class="titleM"> Method </P>
         <div class="blank-lineheight-s"></div>
 
@@ -1125,7 +1123,7 @@
 
       <div class="column centerVer colorGreyShadow border-radius heightM widthS marginIcon float ">
         <img class="widthLogo paddingS" src="icon_ci_2.svg" alt="User Research">
-        <P class="lineHorizS"> </P>
+        <P class="lineHorizSGH"> </P>
         <P class="titleM"> Pain Points </P>
         <div class="blank-lineheight-s"></div>
 
@@ -1135,7 +1133,7 @@
       </div>
       <div class="column centerVer colorGreyShadow border-radius heightM widthS marginIcon float">
         <img class="widthLogo paddingS" src="icon_ci_3.svg" alt="User Research">
-        <P class="lineHorizS"> </P>
+        <P class="lineHorizSGH"> </P>
         <P class="titleM"> Wishlist </P>
         <div class="blank-lineheight-s"></div>
 
@@ -1147,7 +1145,7 @@
   </div>
   <div class="blankHXL"></div>
   <div class="marginAll marginAll1920">
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleM">Key Findings from the Contextual Inquiries </P>
       </div>
@@ -1160,7 +1158,7 @@
             <p class="textM"> Gardeners want a variety of plants and horticultural tools.
               They would like to find friends nearby sharing plants and tools </p>
           </div>
-          <div class="row-change centerVer ">
+          <div class="rowChng centerVer ">
             <img class="icon-l margin-tbr align-left float" src="ppl-07.svg" alt="User Research">
             <div class="speech-bubble float widthL">
               <div class="column margin-xs ">
@@ -1188,7 +1186,7 @@
               overwhelming information from the internet to made poor judgment.
             </p>
           </div>
-          <div class="row-change centerVer">
+          <div class="rowChng centerVer">
             <img class="icon-l margin-tbr align-left float" src="ppl-08.svg" alt="User Research">
             <div class="speech-bubble float widthL">
               <div class="column margin-xs ">
@@ -1210,7 +1208,7 @@
             <p class="textM"> Gardeners become frustrated when advice is not applicable to the
               location or conditions of their garden.(local climate)</p>
           </div>
-          <div class="row-change centerVer ">
+          <div class="rowChng centerVer ">
             <img class="icon-l margin-tbr align-left float" src="ppl-03.svg" alt="User Research">
             <div class="speech-bubble float widthL">
               <div class="column margin-xs ">
@@ -1230,7 +1228,7 @@
             <p class="titleM">Finding 4 </p>
             <p class="textM"> Gardeners struggle to remember the date of the complete task.</p>
           </div>
-          <div class="row-change centerVer ">
+          <div class="rowChng centerVer ">
             <img class="icon-l margin-tbr align-left float" src="ppl-02.svg" alt="User Research">
             <div class="speech-bubble float widthL">
               <div class="column margin-xs ">
@@ -1251,7 +1249,7 @@
     <div class="column">
       <div class="row">
         <P class="titleM">IDENTIFYING PAIN POINTS</P>
-        <img class="widthIconS float" src="icon_painpoints.svg" alt="User Research">
+        <img class="widthIconS  float" src="icon_painpoints.svg" alt="User Research">
       </div>
       <p class="textM">Based on the information collected from contextual inquiries and user
         interviews, I used affinity mapping to group the pain points into similar categories on a
@@ -1262,7 +1260,7 @@
 
     <div class="column">
       <P class="titleM centerHorz padding-l">Affinity Mapping Pain Points </P>
-      <img class="float" src="affinity_mapping1.svg" alt="User Research">
+      <img class="" src="affinity_mapping1.svg" alt="User Research">
     </div>
     <div class="blankHL"></div>
 
@@ -1271,13 +1269,13 @@
         similar notes
 
       </P>
-      <img class="float" src="affinity_mapping2.svg" alt="User Research">
+      <img class="" src="affinity_mapping2.svg" alt="User Research">
     </div>
     <div class="blankHL"></div>
 
     <div class="column">
       <P class="titleM centerHorz padding-l">Prioritise and label pain points </P>
-      <img class="float" src="affinity_mapping3.svg" alt="User Research">
+      <img class="" src="affinity_mapping3.svg" alt="User Research">
     </div>
   </div>
 
@@ -1288,7 +1286,7 @@
   <P class="textNos colorGH">03</P>
   <div class="marginAll marginAll1920">
 
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleL">IDEATION </P>
         <p class="lineHorizAll"></p>
@@ -2605,10 +2603,10 @@
   <div class="blankHL"></div>
 
 
-  <div class="marginAll marginAll1920 row-change ">
+  <div class="marginAll marginAll1920 rowChng ">
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts1.svg" alt="User Research">
-      <P class="lineHorizS"> </P>
+      <P class="lineHorizSGH"> </P>
       <P class="titleM"> Share &amp; Sell </P>
       <div class="blank-lineheight-s"></div>
       <P class="textS"> &#183; Nearby</P>
@@ -2618,7 +2616,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts2.svg" alt="User Research">
-      <P class="lineHorizS"> </P>
+      <P class="lineHorizSGH"> </P>
       <P class="titleM"> Social Network </P>
       <div class="blank-lineheight-s"></div>
       <P class="textS"> &#183; Local Network</P>
@@ -2628,7 +2626,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts3.svg" alt="User Research">
-      <P class="lineHorizS"> </P>
+      <P class="lineHorizSGH"> </P>
       <P class="titleM"> Plant Profile </P>
       <div class="blank-lineheight-s"></div>
 
@@ -2639,7 +2637,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts4.svg" alt="User Research">
-      <P class="lineHorizS"> </P>
+      <P class="lineHorizSGH"> </P>
       <P class="titleM"> Plant Care </P>
       <div class="blank-lineheight-s"></div>
 
@@ -2656,7 +2654,7 @@
   <div class="marginAll marginAll1920">
     <P class="textNos colorGH">04</P>
 
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleL">PROTOTYPE & TESTING </P>
         <p class="lineHorizAll"></p>
