--- a/project/index.html
+++ b/project/index.html
@@ -118,6 +118,8 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
+  <!--intro-->
+
   <div class="blankHL"></div>
   <div class="landingIntro">
     <div class="intro">
@@ -147,12 +149,13 @@
   </div>
   <div class="blankHM"></div>
 
-
-
-  <!--body-->
-  <div class="body-h">
-    <p class="lineVerAll ver1"></p>
+  <div class="centerHorz ver1">
+    <div class=" lineVerAll "></div>
   </div>
+
+  <!--intro-->
+
+
   <!-- content-->
   <div class="row marginAll heightM centerVer marginAll1920">
     <p class="tArrow"> Selected Projects </p>
