--- a/project/meal_planner/index.html
+++ b/project/meal_planner/index.html
@@ -113,14 +113,15 @@
 
   <!--head-->
 
-  <div class="blankPhone"></div>
 
   <!--about mealplanner-->
 
-  <div class="bg-colorMP" id="bg-color-triggerMP">
-    <div class="blankHL"></div>
+  <div class="colorMPbg" id="bg-color-triggerMP">
+    <div class="blankPhone"></div>
 
-    <div class="row-change centerHorz centerVer alignCPH">
+    <div class="blankHS"></div>
+
+    <div class="rowChng centerHorz centerVer alignCPH">
       <img src="../../layout_MealPlanner.png" alt="Meal Planner" class="widthXL">
       <div class="column">
         <P class="titleL">MEAL PLANNER</P>
@@ -135,6 +136,7 @@
         </p>
       </div>
     </div>
+    <div class="blankHM"></div>
 
   </div>
 
@@ -152,7 +154,7 @@
     <!-- content-->
 
     <!--final product 1-->
-    <div class="row-change centerVer marginAll marginAll1920">
+    <div class="rowChng centerVer marginAll marginAll1920">
       <div class="">
         <img src="feature_01.png" alt="Recipe Generator" class="width-xxl">
       </div>
@@ -182,7 +184,7 @@
     <!--final product 1-->
     <div class="blankHXL"></div>
     <!--final product 2-->
-    <div class="row-change centerVer marginAll marginAll1920 row-changeRV">
+    <div class="rowChng centerVer marginAll marginAll1920 rowChngRV">
       <div class="column widthM">
         <p class="titleL" data-aos="fade-up">Grocery Shopping List Provider</p>
         <p class="lineHorizAll"></p>
@@ -213,7 +215,7 @@
     <!--final product 2-->
     <div class="blankHXL"></div>
     <!--final product 3-->
-    <div class="row-change centerVer marginAll marginAll1920">
+    <div class="rowChng centerVer marginAll marginAll1920">
       <div class="">
         <img src="feature_03.png" alt="Recipe Generator" class="width-xxl">
       </div>
@@ -252,7 +254,7 @@
       </div>
       <!-- content-->
 
-      <div class="row-change centerHorz alignCPH marginAll marginAll1920">
+      <div class="rowChng centerHorz alignCPH marginAll marginAll1920">
         <div
           class="row widthM heightM shadowOnly border-radius float centerVer colorBorderL marginAllS">
           <div class="column centerVer padding widthXS">
@@ -317,7 +319,7 @@
 
       </div>
 
-      <div class="row-change centerHorz alignCPH marginAll marginAll1920">
+      <div class="rowChng centerHorz alignCPH marginAll marginAll1920">
         <div
           class="row widthM heightM shadowOnly border-radius float centerVer colorBorderL marginAllS">
           <div class="column centerVer padding widthXS">
@@ -533,7 +535,7 @@
   <!--Problem and solution-->
 
   <div class="marginAll marginAll1920">
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
 
       <div class="column width-xxl heightL ">
         <P class="titleM">PROBLEMS</P>
@@ -618,7 +620,7 @@
 
     <div class="blankHM"></div>
 
-    <div class="row-change alignCPH">
+    <div class="rowChng alignCPH">
 
       <div class="column centerVer centerVer">
         <P class="circle-mp shadowOnly titleM centerHorz centerVer ">Empathize </P>
@@ -740,7 +742,7 @@
 
     <P class="textNos colorMP">01</P>
 
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleL">DISCOVER</P>
         <p class="lineHorizAll"></p>
@@ -756,16 +758,16 @@
       <div class="row">
         <div class="column centerVer"> <img class="widthIconM  marginIcon float"
             src="icon_mp_1-1.svg" alt="User Research">
-          <p class="titleXS">Design Strategy </p>
+          <p class="titleS">Design Strategy </p>
         </div>
 
         <div class="column centerVer"> <img class="widthIconM  marginIcon float"
             src="icon_mp_1-2.svg" alt="User Research">
-          <p class="titleXS">User Research </p>
+          <p class="titleS">User Research </p>
         </div>
         <div class="column centerVer"> <img class="widthIconM  marginIcon float"
             src="icon_mp_1-3.svg" alt="User Research">
-          <p class="titleXS">Competitive Analysis</p>
+          <p class="titleS">Competitive Analysis</p>
         </div>
       </div>
     </div>
@@ -794,7 +796,7 @@
       <div class="column centerVer marginAll1920">
         <div class=" column align-left">
 
-          <div class="row-change">
+          <div class="rowChng">
             <div
               class="column align-left shadowOnly border-radius  widthS padding-s float marginElm">
               <p class="titleM">
@@ -839,7 +841,7 @@
             </div>
           </div>
 
-          <div class="row-change">
+          <div class="rowChng">
             <div
               class="column align-left shadowOnly border-radius widthS padding-s float marginElm">
               <p class="titleM">
@@ -922,7 +924,7 @@
     <div class="blankHS"></div>
 
 
-    <div class="row-change centerHorz alignCPH">
+    <div class="rowChng centerHorz alignCPH">
 
       <div class="column align-left shadowOnly border-radius  widthS padding-s marginElm float">
         <div class="row">
@@ -1030,7 +1032,7 @@
         made this research possible.
       </p>
     </div>
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
 
       <div class="column centerVer shadowOnly border-radius widthL">
         <img src="./quantitative_research_1.svg" alt="DIAGRAM" class="img-l">
@@ -1063,93 +1065,92 @@
     <P class="titleM"> COMPETITIVE ANALYSIS </P>
     <p class="textM">Based on identifying and comparing current meal planning
       website features, analysis how they addressed similar problems.</p>
-      <div class="blankHM"></div>
+    <div class="blankHM"></div>
 
     <img class="widthM marginAllL" src="./competitive_analysis.png" alt="COMPETITIVE ANALYSIS">
     <div class="blankHM"></div>
 
 
-
     <table>
       <tr>
-        <th></th>
-        <td class="titleS">Description</td>
-        <td class="titleS">UX</td>
-        <td class="titleS">Recipe</td>
-        <td class="titleS">Meal Planning</td>
-        <td class="titleS">Shopping List</td>
-        <td class="titleS">Inventory</td>
-        <td class="titleS">Appliance</td>
+        <th> </th>
 
+        <td class="titleS">OrganizEat</td>
+        <td class="titleS">BigOven </td>
+        <td class="titleS">My Fridge Food</td>
+        <td class="titleS">Pantry Check</td>
+        <td class="titleS">Grocery</td>
+        <td class="titleS">Mealthy</td>
       </tr>
       <tr>
-        <th>OrganizEat</th>
-        <td>digital recipe organizer​</td>
+        <th>Description </th>
+        <td>digital recipe organizer​ </td>
+        <td>Free recipe app for home cooks </td>
+        <td>Easy recipes using ingredients you already have ​ </td>
+        <td>Grocery and Food Inventory Expiration Reminders Barcode Scanner </td>
+        <td>Smartest and fastest grocery shopping app </td>
+        <td>Recipe app and kitchen companion </td>
+      </tr>
+      <tr>
+        <th>UX</th>
         <td>Good</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>No</td>
-
-
-      </tr>
-      <tr>
-        <th>BigOven</th>
-        <td>Free recipe app for home cooks</td>
         <td>Good</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>No</td>
-
-      </tr>
-      <tr>
-        <th>My Fridge Food</th>
-        <td>Easy recipes using ingredients you already have</td>
         <td>Average</td>
-        <td>Yes</td>
-        <td>No</td>
-        <td>No</td>
-        <td>Yes</td>
-        <td>No</td>
-
-      </tr>
-      <tr>
-        <th>Pantry Check</th>
-        <td>Grocery and Food Inventory Expiration Reminders Barcode Scanner</td>
         <td>Average</td>
-        <td>No</td>
-        <td>No</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>No</td>
-
-      </tr>
-      <tr>
-        <th>Grocery</th>
-        <td>smartest and fastest grocery shopping app</td>
         <td>Average</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>No</td>
-        <td>No</td>
-        <td>No</td>
-
-      </tr>
-      <tr>
-        <th>Mealthy</th>
-        <td> recipe app and kitchen companion</td>
         <td>Good</td>
+
+      </tr>
+      <tr>
+        <th>Recipe</th>
         <td>Yes</td>
         <td>Yes</td>
+        <td>Yes</td>
+        <td>No</td>
+        <td>Yes</td>
+        <td>Yes</td>
+
+      </tr>
+      <tr>
+        <th>Meal Planning</th>
+        <td>Yes</td>
+        <td>Yes</td>
+        <td>No</td>
+        <td>No</td>
+        <td>Yes</td>
+        <td>Yes</td>
+
+      <tr>
+        <th>Shopping List</th>
+        <td>Yes</td>
+        <td>Yes</td>
+        <td>No</td>
+        <td>Yes</td>
+        <td>No</td>
+        <td>No</td>
+      </tr>
+      <tr>
+        <th>Inventory</th>
+        <td>Yes</td>
+        <td>Yes</td>
+        <td>Yes</td>
+        <td>Yes</td>
+        <td>No</td>
+        <td>No</td>
+
+      </tr>
+      <tr>
+        <th>Appliance</th>
+        <td>No</td>
+        <td>No</td>
+        <td>No</td>
         <td>No</td>
         <td>No</td>
         <td>Yes</td>
 
       </tr>
     </table>
+
 
 
 
@@ -1166,7 +1167,7 @@
 
     <P class="textNos colorMP">02</P>
 
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleL">SECONDARY RESEARCH</P>
         <p class="lineHorizAll"></p>
@@ -1179,12 +1180,12 @@
       <div class="row">
         <div class="column centerVer"> <img class="widthIconM margin-s float" src="icon_mp_2-1.svg"
             alt="User Research">
-          <p class="titleXS">Empathy Mapping </p>
+          <p class="titleS">Empathy Mapping </p>
         </div>
 
         <div class="column centerVer"> <img class="widthIconM margin-s float" src="icon_mp_2-2.svg"
             alt="User Research">
-          <p class="titleXS">Customer Journey </p>
+          <p class="titleS">Customer Journey </p>
         </div>
       </div>
     </div>
@@ -1256,7 +1257,7 @@
 
     <P class="textNos colorMP">03</P>
 
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleL">IDEATION</P>
         <p class="lineHorizAll"></p>
@@ -1271,11 +1272,11 @@
       <div class="row">
         <div class="column centerVer"> <img class="widthIconM margin-s float" src="icon_mp_3-1.svg"
             alt="User Research">
-          <p class="titleXS">USER FLOW</p>
+          <p class="titleS">USER FLOW</p>
         </div>
         <div class="column centerVer"> <img class="widthIconM margin-s float" src="icon_mp_3-3.svg"
             alt="User Research">
-          <p class="titleXS">CARD SORTING</p>
+          <p class="titleS">CARD SORTING</p>
         </div>
       </div>
     </div>
@@ -1811,7 +1812,7 @@
       groups.</p>
     <div class="blankHM"></div>
 
-    <div class="row-change centerHorz">
+    <div class="rowChng centerHorz">
 
       <div class="column centerVer">
         <div class="shadowOnly widthXS padding centerHorz titleS">TRENDING</div>
@@ -1875,7 +1876,7 @@
 
     <P class="textNos colorMP">04</P>
 
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleL">DESIGN & TEST </P>
         <p class="lineHorizAll"></p>
@@ -1889,11 +1890,11 @@
       <div class="row">
         <div class="column centerVer"> <img class="widthIconM margin-s float" src="icon_mp_4-1.svg"
             alt="User Research">
-          <p class="titleXS">WIREFRAMES </p>
+          <p class="titleS">WIREFRAMES </p>
         </div>
         <div class="column centerVer"> <img class="widthIconM margin-s float" src="icon_mp_4-2.svg"
             alt="User Research">
-          <p class="titleXS">USABILITY TESTING</p>
+          <p class="titleS">USABILITY TESTING</p>
 
         </div>
 
@@ -2034,7 +2035,7 @@
 
     <P class="textNos colorMP">05</P>
 
-    <div class="row-change centerVer">
+    <div class="rowChng centerVer">
       <div class="column">
         <P class="titleL">FINAL DESIGN AND ITERATION </P>
         <p class="lineHorizAll"></p>
@@ -2047,11 +2048,11 @@
       <div class="row">
         <div class="column centerVer"> <img class="widthIconM margin-s float" src="icon_mp_4-1.svg"
             alt="User Research">
-          <p class="titleXS">FINAL DESIGN </p>
+          <p class="titleS">FINAL DESIGN </p>
         </div>
         <div class="column centerVer"> <img class="widthIconM margin-s float" src="icon_mp_4-2.svg"
             alt="User Research">
-          <p class="titleXS">ITERATION</p>
+          <p class="titleS">ITERATION</p>
         </div>
       </div>
     </div>
